Android: Add version suffix to extracted .pak files

This will (hopefully) guarantee that we never use a stale .pak file, and
actually simplifies the triggering & clean-up logic somewhat (e.g. no
longer uses SharedPreferences).

BUG=691719

Review-Url: https://codereview.chromium.org/2828823002
Cr-Commit-Position: refs/heads/master@{#466067}

Former-commit-id: a9cdba46ce4367c96aa7c9a0655295a5b8de5992